# ai-notes-be

./: .json  README.md  prompt.txt  pyproject.toml
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: __init__.py  ai.py  auth.py  labels.py  notes.py  scheduler.py  users.py
app/core/: config.py  deps.py  redis.py  security.py
app/crud/v1/: __init__.py  label.py  note.py  scheduler.py  user.py
app/db/: init_db.py  session.py
app/models/: __init__.py  base.py  label.py  note.py  scheduler.py  setting.py  task.py  user.py
app/schemas/: base.py  common.py  label.py  note.py  scheduler.py  task.py  token.py  user.py
app/services/: ai_service.py  email_service.py  otp_service.py
